--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "rust-analyzer.linkedProjects": ["Cargo.toml", "cls_ingress-ebpf/Cargo.toml"]
+  "rust-analyzer.linkedProjects": ["Cargo.toml", "ebpf_tproxy-ebpf/Cargo.toml"]
 }
