--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["xtask", "cls_ingress", "cls_ingress-common"]
+members = ["xtask", "ebpf_tproxy", "ebpf_tproxy-common"]
